# AnimeWatchBackend

./: Cargo.toml  README.md
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250608_145822_users.rs
src/: database.rs  main.rs  state.rs  types.rs
src/auth/: jwt.rs  middleware.rs  password.rs
src/config/: mod.rs
src/dto/: auth.rs  mod.rs  regex.rs  user.rs
src/entity/: anime.rs  mod.rs  prelude.rs  users.rs
src/errors/: mod.rs
src/handlers/: auth.rs  user.rs
src/services/: authservice.rs  email_service.rs  mod.rs  redis_service.rs  userservice.rs
