[package]
name = "backend-portfolio"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-valid = { version = "0.23.0", default-features = false, features = ["validify", "basic", "typed_multipart" , "json"] }
axum_typed_multipart = "0.16.2"
tokio = {version = "1.45.1" , features = ["full"]}
validify = "2.0.0"
serde = {version = "*" , features = ["derive"]}
dotenvy ={ version = "*"}
sea-orm = { version = "*", features = ["debug-print", "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
anyhow = "1.0.98"
tracing-subscriber = "0.3.19"
thiserror = "2.0.12"
tracing = "0.1.41"
tower = "0.5.2"
tower-http = {version = "*" , features = ["cors", "trace"]}
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
chrono = { version = "0.4.41", features = ["serde"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
serde_json = "1.0.140"
regex = "1.11.1"
lettre = { version = "0.11.17" , features = ["tokio1-native-tls"]}
uuid = { version = "1.17.0", features = ["v4", "serde"] }
bb8-redis = "0.24.0"

[workspace]
members = ["migration"]
